Fixes: NB#200597 - Homescreen: Service Provider name is almost not visible in LHS corner
Bug: NB#200597 - Homescreen: Service Provider name is almost not visible in LHS corner
RevBy: TrustMe

--- a/themes/style/default.css
+++ b/themes/style/default.css
@@ -241,6 +241,8 @@ StatusIndicatorLabelStyle {
 }
 
 MLabelStyle#StatusIndicatorLabel {
+    font: $FONT_SMALL;
+    color: #FFFFFF;
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
